fix float button entrance animation on smaller device

--- a/src/modules/filters/float-button.css
+++ b/src/modules/filters/float-button.css
@@ -1,6 +1,6 @@
 .FloatButton {
-  width: 134px;
-  height: 134px;
+  width: 35.745vw;
+  height: 35.745vw;
   background: #FB9F84;
   padding-top: 15px;
   border-radius: 100%;
