--- a/src/modules/filters/product-filter.css
+++ b/src/modules/filters/product-filter.css
@@ -37,6 +37,6 @@
   }
 
   100% {
-    transform: scale(2.95) translate(-44px, -50.5px);
+    transform: scale(2.67) translate(-30.8%, -54.2%);
   }
 }
